--- a/client/src/app/main/main.component.html
+++ b/client/src/app/main/main.component.html
@@ -1,11 +1,12 @@
 <div class="col-md-6 col-md-offset-3">
-    <h1>Home</h1>
+    <h1>{{title}}</h1>
     <p>You're logged in with JWT!!</p>
     <div>
         Users from secure api end point:
         <ul>
-            <li *ngFor="let user of users">{{user.firstName}} {{user.lastName}}</li>
+            <li>login: test</li>
+            <li>password: test</li>
         </ul>
     </div>
-    <p><a [routerLink]="['/login']">Logout</a></p>
+    <p><a [routerLink]="['/auth']">Logout</a></p>
 </div>
