--- a/client/src/app/users/auth/auth.component.html
+++ b/client/src/app/users/auth/auth.component.html
@@ -1,16 +1,19 @@
 <mat-card>
+  <mat-card-header>
+    <mat-card-title><strong>Authorization</strong></mat-card-title>
+  </mat-card-header>
   <mat-card-content>
     <div class="alert alert-info">
-      Username: test<br/>
+      Username: test@gmail.com<br/>
       Password: test
     </div>
     <h2>Login</h2>
 
     <form [formGroup]="authForm" (ngSubmit)="authForm.valid && login()">
       <mat-form-field>
-        <input matInput id="username" placeholder="Username" type="text" [(ngModel)]="user.username"
-               formControlName="username" required/>
-        <mat-error *ngIf="username.hasError('required')">Username is required</mat-error>
+        <input matInput id="email" placeholder="Email address" type="text" [(ngModel)]="user.email"
+               formControlName="email" required/>
+        <mat-error *ngIf="username.hasError('required')">Email is required</mat-error>
       </mat-form-field>
 
       <p>
