--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -1,1 +1,6 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css'
+
+body
+  font-family: 'Roboto','Helvetica','Arial',sans-serif
+  font-weight: 400
+  line-height: 20px
