--- a/client/src/app/document/invoice-detail/invoice-detail.component.html
+++ b/client/src/app/document/invoice-detail/invoice-detail.component.html
@@ -1,12 +1,33 @@
 <div class="card-body">
-  <mat-card-header class="card-header">
-    <mat-icon mat-card-avatar class="card-header-icon">assignment</mat-icon>
-    <mat-card-title>
-      <span *ngIf="!id">New </span>
-      Consignment Note
-    </mat-card-title>
-    <mat-card-subtitle>№{{id}}&emsp;{{invoice.status}}</mat-card-subtitle>
-  </mat-card-header>
+  <div class="card-header">
+    <div class="header-cell header-sidebar-left">
+      <mat-icon mat-card-avatar class="card-header-icon">assignment</mat-icon>
+    </div>
+    <div class="header-cell">
+      <div class="header-title">
+        <span *ngIf="!id">New </span>
+        Consignment Note
+      </div>
+      <div class="header-subtitle" *ngIf="id">
+        №{{id}}&emsp;{{invoice.status}}
+      </div>
+    </div>
+    <div class="header-cell header-sidebar-right">
+      <button mat-icon-button matTooltip="Edit invoice">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button matTooltip="More actions" [matMenuTriggerFor]="menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu" xPosition="before" [overlapTrigger]="false">
+        <button mat-menu-item>Create waybill</button>
+        <button mat-menu-item>Delete note</button>
+      </mat-menu>
+      <button mat-icon-button matTooltip="Close" [mat-dialog-close]>
+        <mat-icon>close</mat-icon>
+      </button>
+    </div>
+  </div>
   <mat-card-content>
     <div class="row">
       <div class="col-1">
@@ -65,7 +86,7 @@
                   <button class="delete-btn" mat-icon-button (click)="deleteItem(i)" *ngIf="consignments.controls.length > 1">
                     <mat-icon>remove_circle</mat-icon>
                   </button>
-                  <button class="add-btn" mat-icon-button (click)="addEmptyItem()" *ngIf="i === (consignments.controls.length - 1) && consignment.controls.item.value !== null">
+                  <button class="add-fab-btn" mat-icon-button (click)="addEmptyItem()" *ngIf="i === (consignments.controls.length - 1) && consignment.controls.item.value !== null">
                     <mat-icon>add_circle</mat-icon>
                   </button>
                 </div>
