--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -4,3 +4,59 @@ body
   font-family: 'Roboto','Helvetica','Arial',sans-serif
   font-weight: 400
   line-height: 20px
+
+.card-header
+  height: 72px
+  width: 100%
+  display: table
+  align-items: stretch
+  background: #f7f7f7
+
+  .header-cell
+    display: table-cell
+    vertical-align: middle
+
+    .header-title
+      color: rgba(0,0,0,.87)
+      font-size: 16px
+
+    .header-subtitle
+      color: rgba(0,0,0,.54)
+      font-size: 14px
+      font-weight: 400
+      line-height: 20px
+      margin-top: 10px
+
+  .header-sidebar-right
+    width: 120px
+
+    .mat-icon-button
+      margin-right: -8px
+
+  .header-sidebar-left
+    width: 100px
+    text-align: center
+
+    .mat-icon
+      vertical-align: middle
+      font-size: 44px
+
+.add-fab-btn
+  position: fixed !important
+  bottom: 0
+  right: 0
+  margin-right: 24px !important
+  margin-bottom: 80px !important
+
+  .mat-icon
+    font-size: 26px
+    padding-right: 2px
+    font-weight: bold
+
+.paginated-table
+  margin-bottom: 56px
+
+  .paginator
+    position: fixed
+    bottom: 0
+    right: 24px
