--- a/client/src/app/document/invoice-detail/invoice-detail.component.sass
+++ b/client/src/app/document/invoice-detail/invoice-detail.component.sass
@@ -82,5 +82,10 @@ $background-color--gray: #f7f7f7
   align-items: center
   align-content: flex-start
 
-  mat-icon
+  .mat-icon
     font-size: 20px
+
+.mat-dialog-actions
+  margin-bottom: 0
+  padding-right: 24px
+  justify-content: flex-end
