--- a/client/src/app/document/document.component.sass
+++ b/client/src/app/document/document.component.sass
@@ -1,6 +1,6 @@
 .mat-card
   width: 700px
-  //max-height: 500px
+  margin: -24px
 
 .mat-card--no-margin
   padding: 0
@@ -12,16 +12,3 @@
 @media all and (min-width: 408px)
   /deep/ .mat-tab-label
     flex: 30%
-
-.card-actions
-  height: 42px
-  padding: 0 12px
-  display: flex
-  justify-content: flex-end
-  align-items: flex-start
-
-  button
-    margin: 0 12px
-
-/deep/ .mat-dialog-container
-  padding: 0
