--- a/client/src/app/document/invoices/invoices.component.sass
+++ b/client/src/app/document/invoices/invoices.component.sass
@@ -1,7 +1,5 @@
-$background-color--gray: #f7f7f7
-
-mat-row:hover
-  background-color: $background-color--gray
+.mat-row:hover
+  background-color: #f7f7f7
   transition-duration: .28s
   transition-timing-function: cubic-bezier(.4,0,.2,1)
   transition-property: background-color
