--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -1,34 +1,34 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css'
 
 body
-  font-family: 'Roboto','Helvetica','Arial',sans-serif
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif
   font-weight: 400
   line-height: 20px
 
 .card-header
   height: 72px
   width: 100%
-  display: table
-  align-items: stretch
+  display: flex
+  justify-content: space-between
+  align-items: center
   background: #f7f7f7
 
   .header-cell
-    display: table-cell
     vertical-align: middle
 
     .header-title
-      color: rgba(0,0,0,.87)
+      color: rgba(0, 0, 0, .87)
       font-size: 16px
 
     .header-subtitle
-      color: rgba(0,0,0,.54)
+      color: rgba(0, 0, 0, .54)
       font-size: 14px
       font-weight: 400
       line-height: 20px
       margin-top: 10px
 
   .header-sidebar-right
-    width: 120px
+    margin: 0 28px
 
     .mat-icon-button
       margin-right: -8px
@@ -40,6 +40,9 @@ body
     .mat-icon
       vertical-align: middle
       font-size: 44px
+
+  .header-middle
+    flex: 1
 
 .add-fab-btn
   position: fixed !important
