--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -9,23 +9,21 @@ body
   height: 72px
   width: 100%
   display: flex
+  flex-flow: row wrap
   justify-content: space-between
   align-items: center
   background: #f7f7f7
 
-  .header-cell
-    vertical-align: middle
+  .header-title
+    color: rgba(0, 0, 0, .87)
+    font-size: 16px
 
-    .header-title
-      color: rgba(0, 0, 0, .87)
-      font-size: 16px
-
-    .header-subtitle
-      color: rgba(0, 0, 0, .54)
-      font-size: 14px
-      font-weight: 400
-      line-height: 20px
-      margin-top: 10px
+  .header-subtitle
+    color: rgba(0, 0, 0, .54)
+    font-size: 14px
+    font-weight: 400
+    line-height: 20px
+    margin-top: 10px
 
   .header-sidebar-right
     margin: 0 28px
