--- a/client/src/app/waybills/waybill-list/waybill-list.component.sass
+++ b/client/src/app/waybills/waybill-list/waybill-list.component.sass
@@ -4,3 +4,11 @@
   transition-timing-function: cubic-bezier(.4,0,.2,1)
   transition-property: background-color
   cursor: pointer
+
+.mat-row--idle
+  padding-left: 20px
+  border-left: 4px solid orange
+
+.mat-row--started
+  padding-left: 18px
+  border-left: 6px solid green
