--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -17,6 +17,7 @@ body
   .header-title
     color: rgba(0, 0, 0, .87)
     font-size: 16px
+    text-transform: uppercase
 
   .header-subtitle
     color: rgba(0, 0, 0, .54)
