--- a/client/src/app/main/main.component.html
+++ b/client/src/app/main/main.component.html
@@ -1,12 +1,5 @@
-<div class="col-md-6 col-md-offset-3">
-    <h1>{{title}}</h1>
-    <p>You're logged in with JWT!!</p>
-    <div>
-        Users from secure api end point:
-        <ul>
-            <li>login: test</li>
-            <li>password: test</li>
-        </ul>
-    </div>
-    <p><a [routerLink]="['/auth']">Logout</a></p>
-</div>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>{{title}}</span>
+  </mat-toolbar-row>
+</mat-toolbar>
