--- a/client/src/app/main/main.component.html
+++ b/client/src/app/main/main.component.html
@@ -1,5 +1,29 @@
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <span>{{title}}</span>
-  </mat-toolbar-row>
-</mat-toolbar>
+<div class="container" [class.is-mobile]="matches">
+  <mat-toolbar color="primary" class="toolbar mat-elevation-z6">
+    <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+    <h1 class="app-name">
+      <span>{{title}}<span class="title-separator">–</span>{{subtitle}}</span>
+    </h1>
+    <span class="toolbar-spacer"></span>
+    <button mat-icon-button>
+      <mat-icon>search</mat-icon>
+    </button>
+    <button mat-icon-button>
+      <mat-icon>more_vert</mat-icon>
+    </button>
+  </mat-toolbar>
+
+  <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="matches ? 56 : 0">
+    <mat-sidenav #snav [mode]="matches ? 'over' : 'side'" [fixedInViewport]="matches" fixedTopGap="56" [opened]="!matches">
+      <mat-nav-list>
+        <a mat-list-item [routerLink]="link.path" *ngFor="let link of navLinks" routerLinkActive="active">
+          <span class="nav-item">{{link.label}}</span>
+        </a>
+      </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
