--- a/client/src/app/users/user-list/user-list.component.html
+++ b/client/src/app/users/user-list/user-list.component.html
@@ -1,33 +1,33 @@
-<div class="ui-g">
+<div>
     <div>
 
     </div>
-    <div class="ui-g-6">
+    <div class="paginated-table">
         <mat-table #table [dataSource]="dataSource">
-      
+
             <!-- Position Column -->
             <ng-container matColumnDef="name">
                 <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
             </ng-container>
-      
+
             <!-- Name Column -->
             <ng-container matColumnDef="login">
                 <mat-header-cell *matHeaderCellDef> Login </mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.login}} </mat-cell>
             </ng-container>
-      
+
             <!-- Weight Column -->
             <ng-container matColumnDef="role">
                 <mat-header-cell *matHeaderCellDef> Role </mat-header-cell>
                 <mat-cell *matCellDef="let element"> {{element.role}} </mat-cell>
             </ng-container>
-      
+
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
-      
-        <mat-paginator #paginator
+
+        <mat-paginator class="paginator" #paginator
             [pageSize]="10"
             [pageSizeOptions]="[5, 10, 20]">
         </mat-paginator>
