--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -1,11 +1,11 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css'
-
-@import '~primeng/resources/primeng.min.css';
+@import '~primeng/resources/primeng.min.css'
 
 body
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif
   font-weight: 400
   line-height: 20px
+  margin: 0
 
 .card-header
   height: 72px
@@ -45,12 +45,20 @@ body
   .header-middle
     flex: 1
 
+@keyframes slideInFromBottom
+  0%
+    transform: translateY(150%)
+  100%
+    transform: translateY(0)
+
 .add-fab-btn
+  z-index: 2
   position: fixed !important
   bottom: 0
   right: 0
   margin-right: 24px !important
   margin-bottom: 80px !important
+  animation: slideInFromBottom .400s ease 0s 1
 
   .mat-icon
     font-size: 26px
