Change `Main` page, full pagination functional. Add data service for `Invoice` and `Waybill` details. Change the app icon.

--- a/client/src/app/doc-holder/doc-holder.component.html
+++ b/client/src/app/doc-holder/doc-holder.component.html
@@ -4,10 +4,10 @@
       <app-invoice-detail [id]="data.id"></app-invoice-detail>
     </mat-tab>
     <mat-tab label="Waybill">
-      <app-waybill></app-waybill>
+      <app-waybill [id]="data.id"></app-waybill>
     </mat-tab>
     <mat-tab label="Act of Loss">
-      <app-lossact></app-lossact>
+      <app-lossact [id]="data.id"></app-lossact>
     </mat-tab>
   </mat-tab-group>
 </mat-card>
