--- a/client/src/app/main/main.component.sass
+++ b/client/src/app/main/main.component.sass
@@ -2,8 +2,7 @@
   flex: 1 1 auto
 
 .title-separator
-  margin: 0 .5em 0 .5em
-  line-height: 64px
+  margin: 0 .5em 0
 
 .container
   display: flex
