--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -68,6 +68,13 @@ body
 .paginated-table
   margin-bottom: 56px
 
+  .mat-row:hover
+    background-color: #f7f7f7
+    transition-duration: .28s
+    transition-timing-function: cubic-bezier(.4,0,.2,1)
+    transition-property: background-color
+    cursor: pointer
+
   .paginator
     position: fixed
     bottom: 0
