--- a/client/src/app/main/main.component.html
+++ b/client/src/app/main/main.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar color="primary" class="toolbar mat-elevation-z6">
     <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
     <h1 class="app-name">
-      <span>{{title}}<span class="title-separator">–</span>{{subtitle}}</span>
+      <span>{{title}}<span class="title-separator" *ngIf="subtitle">&#x2500;</span>{{subtitle}}</span>
     </h1>
     <span class="toolbar-spacer"></span>
     <button mat-icon-button>
