--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -1,6 +1,6 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css'
 
-@import '~primeng/resources/primeng.min.css';
+@import '~primeng/resources/primeng.min.css'
 
 body
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif
