add 'auth with roles' feature on the client app

--- a/client/src/app/users/auth/auth.component.html
+++ b/client/src/app/users/auth/auth.component.html
@@ -1,10 +1,18 @@
 <mat-card>
   <mat-card-header>
-    <mat-card-title><strong>Authorization</strong></mat-card-title>
+    <mat-card-title><strong><h1>Authorization</h1></strong></mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="alert alert-info">
-      Username: test@gmail.com<br/>
+      Available users:<br>
+      <ul>
+        <li>email: sysadmin@gmail.com</li>
+        <li>email: admin@gmail.com</li>
+        <li>email: manager@gmail.com</li>
+        <li>email: dispatcher@gmail.com</li>
+        <li>email: driver@gmail.com</li>
+        <li>email: owner@gmail.com</li>
+      </ul>
       Password: test
     </div>
     <h2>Login</h2>
