Move `Logout` button into the vertical menu.

--- a/client/src/app/main/main.component.html
+++ b/client/src/app/main/main.component.html
@@ -8,14 +8,12 @@
     <button mat-icon-button matTooltip="Search">
       <mat-icon>search</mat-icon>
     </button>
-    <button mat-icon-button matTooltip="Logout" (click)="logout()">
-      <mat-icon>exit_to_app</mat-icon>
-    </button>
     <button mat-icon-button matTooltip="More actions" [matMenuTriggerFor]="menu">
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu" xPosition="before" [overlapTrigger]="false">
       <button mat-menu-item (click)="openTemplate()">Template</button>
+      <button mat-menu-item (click)="logout()">Logout</button>
     </mat-menu>
   </mat-toolbar>
 
