fix bug in auth feature after page reloading, add clients feature

--- a/client/src/app/users/auth/auth.component.html
+++ b/client/src/app/users/auth/auth.component.html
@@ -12,6 +12,7 @@
         <li>email: dispatcher@gmail.com</li>
         <li>email: driver@gmail.com</li>
         <li>email: owner@gmail.com</li>
+        <li>email: all@gmail.com</li>
       </ul>
       Password: test
     </div>
