--- a/client/src/app/bithday-congratulation/bithday-congratulation.component.html
+++ b/client/src/app/bithday-congratulation/bithday-congratulation.component.html
@@ -1,3 +1,12 @@
-<p>
-  bithday-congratulation works!
-</p>
+
+<mat-card>
+
+  <mat-form-field>
+    <textarea matInput placeholder="Congragulation Message"></textarea>
+  </mat-form-field>
+
+</mat-card>
+<div class=""
+
+
+
