Add the `busy` field to the User model.

--- a/client/src/app/invoices/invoice-detail/invoice-detail.component.html
+++ b/client/src/app/invoices/invoice-detail/invoice-detail.component.html
@@ -32,7 +32,7 @@
   </div>
 
   <mat-card-content>
-    <form id="cForm" [formGroup]="cForm" (ngSubmit)="cForm.valid && submit()">
+    <form id="cForm" [formGroup]="lForm" (ngSubmit)="lForm.valid && submit()">
       <div class="row">
         <div class="col-1">
           <mat-icon class="label-icon">person</mat-icon>
