--- a/client/src/app/invoices/lossact-detail/lossact-detail.component.html
+++ b/client/src/app/invoices/lossact-detail/lossact-detail.component.html
@@ -1,5 +1,91 @@
-<div style="height: 385px">
-  <p>
-    lossact works!
-  </p>
+<!--
+<div class="card-body">
+  <div class="card-header">
+    <div class="header-sidebar-left">
+      <mat-icon mat-card-avatar class="card-header-icon">assignment</mat-icon>
+    </div>
+
+    <div class="header-middle">
+      <div class="header-title">
+        Act of Loss
+      </div>
+    </div>
+
+    <div class="header-sidebar-right">
+      <button mat-icon-button matTooltip="Edit invoice" (click)="toggleEdit()" *ngIf="!edit">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button matTooltip="More actions" [matMenuTriggerFor]="menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu" xPosition="before" [overlapTrigger]="false">
+        <button mat-menu-item>Create waybill</button>
+        <button mat-menu-item (click)="deleteInvoice()">Delete note</button>
+      </mat-menu>
+      <button mat-icon-button matTooltip="Close" [mat-dialog-close]>
+        <mat-icon>close</mat-icon>
+      </button>
+    </div>
+  </div>
+
+  <mat-card-content>
+    <form id="cForm" [formGroup]="lForm" (ngSubmit)="lForm.valid && submit()">
+      <div class="row">
+        <div class="col-1">
+          <p>Lost items:</p>
+        </div>
+
+        <div class="col-2">
+          <table class="consignment-table" formArrayName="consignments">
+            <thead>
+            <tr>
+              <th>Product name</th>
+              <th>Amount</th>
+            </tr>
+            </thead>
+
+            <tbody>
+            <tr *ngFor="let consignment of consignments.controls; index as i" [formGroupName]="i" [@shrinkIn]="'in'">
+              <td>
+                <mat-form-field class="item-field">
+                  <mat-select formControlName="item" [compareWith]="compareItem">
+                    <mat-option *ngFor="let item of items" [value]="item">{{item.name}}</mat-option>
+                  </mat-select>
+                  <mat-error *ngIf="consignment.controls['item'].hasError('required')">Field is required</mat-error>
+                </mat-form-field>
+              </td>
+
+              <td>
+                <mat-form-field class="amount-field">
+                  <input matInput type="number" min="0" formControlName="amount" required>
+                  <span matSuffix>{{consignment.controls.item.value && consignment.controls.item.value.unitCode}}</span>
+                  <mat-error *ngIf="consignment.controls['amount'].hasError('required')">Field is required</mat-error>
+                  <mat-error *ngIf="consignment.controls['amount'].hasError('min')">The amount can not be negative</mat-error>
+                </mat-form-field>
+              </td>
+
+              <td>
+                <div class="consignment-btn-row">
+                  <button class="remove-btn" mat-icon-button (click)="deleteItem(i)" *ngIf="shouldShowRemoveBtn()">
+                    <mat-icon>remove_circle</mat-icon>
+                  </button>
+
+                  <button class="add-btn" mat-icon-button (click)="addItem()" *ngIf="shouldShowAddBtn(i)">
+                    <mat-icon>add_circle</mat-icon>
+                  </button>
+                </div>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </form>
+  </mat-card-content>
 </div>
+
+<mat-dialog-actions>
+  <button mat-button color="primary" mat-dialog-close (click)="cancel()">CANCEL</button>
+  <button mat-button color="primary" type="submit" form="cForm" [disabled]="!edit">APPLY</button>
+</mat-dialog-actions>
+-->
