--- a/client/src/app/doc-holder/doc-holder.component.html
+++ b/client/src/app/doc-holder/doc-holder.component.html
@@ -1,16 +1,16 @@
 <mat-card class="mat-card--no-margin mat-elevation-z8">
   <mat-tab-group #tabs [selectedIndex]="selectedTab">
-    <mat-tab label="Consignment Note" [ngSwitch]="isLoaded">
+    <mat-tab label="Consignment Note" [ngSwitch]="isInvoiceLoaded">
       <app-invoice-detail [invoice]="invoice" *ngSwitchCase="true"></app-invoice-detail>
       <app-doc-holder-placeholder *ngSwitchDefault></app-doc-holder-placeholder>
     </mat-tab>
-    <mat-tab label="Waybill" [ngSwitch]="isLoaded" [disabled]="isTabDisabled">
+    <mat-tab label="Waybill" [ngSwitch]="isWaybillLoaded" [disabled]="isTabDisabled">
       <app-waybill-detail [invoice]="invoice" *ngSwitchCase="true"></app-waybill-detail>
-      <div *ngSwitchDefault>LOADING...</div>
+      <app-doc-holder-placeholder *ngSwitchDefault></app-doc-holder-placeholder>
     </mat-tab>
-    <mat-tab label="Act of Loss" [ngSwitch]="isLoaded" [disabled]="isTabDisabled">
+    <mat-tab label="Act of Loss" [ngSwitch]="isLossActLoaded" [disabled]="isTabDisabled">
       <app-lossact [invoice]="invoice" *ngSwitchCase="true"></app-lossact>
-      <div *ngSwitchDefault>LOADING...</div>
+      <app-doc-holder-placeholder *ngSwitchDefault></app-doc-holder-placeholder>
     </mat-tab>
   </mat-tab-group>
 </mat-card>
