--- a/client/src/app/waybills/waybill-detail/waybill-detail.component.html
+++ b/client/src/app/waybills/waybill-detail/waybill-detail.component.html
@@ -138,7 +138,7 @@
       </div>
     </form>
 
-    <div #map style="height: 300px" (mouseenter)="loadMap()"></div>
+    <p-gmap [style]="{'width':'100%','height':'320px'}" (onMapReady)="setMap($event)" (mouseenter)="loadMap()"></p-gmap>
   </mat-card-content>
 </div>
 
