--- a/client/src/app/main/main.component.sass
+++ b/client/src/app/main/main.component.sass
@@ -45,3 +45,8 @@ h1.app-name
 .mat-list-item.active
   color: #673ab7
   font-weight: 600
+
+.logged-in-message
+  margin-right: 20px
+  font-size: 80%
+  font-weight: 50
