Created Popup for editing template.(without image in it)

--- a/client/src/app/bithday-congratulation/bithday-congratulation.component.sass
+++ b/client/src/app/bithday-congratulation/bithday-congratulation.component.sass
@@ -1,2 +1,40 @@
-.mat-card
+
+
+
+
+.mat-dialog-content
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  align-items: center
+  height: 500px
   width: 600px
+
+.template_letter
+  width: 400px
+  border: 1px solid black
+  border-collapse: collapse
+  background-color: #eaeaea
+
+#header_with_iamge
+  width: 400px
+  height: 200px
+  background-color: #78ab46
+
+
+mat-form-field
+  width: 400px
+
+
+
+
+
+
+
+
+
+
+mat-dialog-actions
+  display: flex
+  justify-content: flex-end
+
