--- a/client/src/app/bithday-congratulation/bithday-congratulation.component.html
+++ b/client/src/app/bithday-congratulation/bithday-congratulation.component.html
@@ -1,12 +1,76 @@
 
-<mat-card>
 
-  <mat-form-field>
-    <textarea matInput placeholder="Congragulation Message"></textarea>
-  </mat-form-field>
+  <mat-dialog-content>
 
-</mat-card>
-<div class=""
 
+    <table class="template_letter">
+
+      <tr>
+        <td id="header_with_iamge">
+            <img src="">
+        </td>
+      </tr>
+      <tr id="text_congr" >
+        <mat-form-field>
+          <textarea [(ngModel)]="text" matInput matTextareaAutosize matAutosizeMinRows="10"
+                    placeholder="Поздравление">
+          </textarea>
+        </mat-form-field>
+      </tr>
+      <tr>
+
+      </tr>
+
+    </table>
+  </mat-dialog-content>
+
+
+
+
+
+<mat-dialog-actions>
+  <button mat-button color="primary" mat-dialog-close (click)="cancel()">CANCEL</button>
+  <button mat-button color="primary" type="submit">APPLY</button>
+</mat-dialog-actions>
+
+
+<!--<table id="table-template">-->
+<!--<tr>-->
+<!--<td>-->
+
+<!--</td>-->
+<!--<td>-->
+<!--<mat-form-field>-->
+<!--<textarea matInput placeholder="Поздравление"></textarea>-->
+<!--</mat-form-field>-->
+<!--</td>-->
+<!--</tr>-->
+
+<!--</table>-->
+<!--<mat-table>-->
+<!--<mat-row>-->
+
+
+<!--</mat-row>-->
+
+<!--</mat-table>-->
+
+
+<!--<table align="center" border="0" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;">-->
+<!--<tr>-->
+<!--<td align="center" bgcolor="#78ab46" style="padding: 40px 0 30px 0;">-->
+<!--<img src='${imagehp}' alt="My image"  style="display: block;" />-->
+<!--</td>-->
+<!--</tr>-->
+<!--<tr>-->
+<!--<td bgcolor="#eaeaea" style="padding: 40px 30px 40px 30px;">-->
+<!--<p>Уважаемый ${fullname},</p>-->
+<!--<p>Поздравляем Вас с ${age}</p>-->
+<!--<p>${congragulation}</b></p>-->
+<!--<p>С уважением, коллектив ООО ”Транспортные системы”</p>-->
+<!--</td>-->
+<!--</tr>-->
+
+<!--</table>-->
 
 
