--- a/client/src/app/doc-holder/doc-holder.component.html
+++ b/client/src/app/doc-holder/doc-holder.component.html
@@ -4,11 +4,11 @@
       <app-invoice-detail [invoice]="invoice" *ngSwitchCase="true"></app-invoice-detail>
       <app-doc-holder-placeholder *ngSwitchDefault></app-doc-holder-placeholder>
     </mat-tab>
-    <mat-tab label="Waybill" [ngSwitch]="isWaybillLoaded" [disabled]="isTabDisabled">
+    <mat-tab label="Waybill" [ngSwitch]="isWaybillLoaded" [disabled]="!isWaybillLoaded">
       <app-waybill-detail [invoice]="invoice" *ngSwitchCase="true"></app-waybill-detail>
       <app-doc-holder-placeholder *ngSwitchDefault></app-doc-holder-placeholder>
     </mat-tab>
-    <mat-tab label="Act of Loss" [ngSwitch]="isLossActLoaded" [disabled]="isTabDisabled">
+    <mat-tab label="Act of Loss" [ngSwitch]="isLossActLoaded" [disabled]="!isLossActLoaded">
       <app-lossact [invoice]="invoice" *ngSwitchCase="true"></app-lossact>
       <app-doc-holder-placeholder *ngSwitchDefault></app-doc-holder-placeholder>
     </mat-tab>
