--- a/client/src/app/waybills/waybill-detail/waybill-detail.component.sass
+++ b/client/src/app/waybills/waybill-detail/waybill-detail.component.sass
@@ -77,10 +77,14 @@ $line-color: rgba(0,0,0,.12)
   color: #666
   font-weight: lighter
 
+.col-date
+  width: 70px
+
 .checkpoint-btn-row
   display: flex
   align-items: center
   align-content: flex-start
+  width: 84px
 
   .mat-icon
     font-size: 20px
