--- a/client/src/app/waybills/waybill-list/waybill-list.component.html
+++ b/client/src/app/waybills/waybill-list/waybill-list.component.html
@@ -26,7 +26,7 @@
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openWaybillDetail(row.id)"
+    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openWaybillDetail(row.invoiceId)"
              [ngClass]="{'mat-row--idle': !row.status, 'mat-row--started': row.status === waybillStatus.STARTED}">
     </mat-row>
   </mat-table>
@@ -34,7 +34,7 @@
   <mat-paginator class="paginator"
                  [length]="length"
                  [pageSize]="pageSize"
-                 [pageSizeOptions]="[3, 5]"
+                 [pageSizeOptions]="[10, 20]"
                  (page)="pageEvent = loadWaybills($event)">
   </mat-paginator>
 </div>
