--- a/client/src/app/waybills/waybill-detail/waybill-detail.component.html
+++ b/client/src/app/waybills/waybill-detail/waybill-detail.component.html
@@ -144,7 +144,7 @@
   </mat-card-content>
 </div>
 
-<mat-dialog-actions *ngIf="editAvailability">
+<mat-dialog-actions>
   <button mat-button color="primary" mat-dialog-close (click)="cancel()">CANCEL</button>
-  <button mat-button color="primary" type="submit" form="wForm" [disabled]="!edit">APPLY</button>
+  <button mat-button color="primary" type="submit" form="wForm" [disabled]="!edit || !editAvailability">APPLY</button>
 </mat-dialog-actions>
