--- a/client/src/app/users/user-detail/user-detail.component.sass
+++ b/client/src/app/users/user-detail/user-detail.component.sass
@@ -1,1 +1,19 @@
 
+$background-color--gray: #f7f7f7
+
+div .card-body
+  width: 800px
+  overflow: auto
+
+@media all and (min-width: 408px)
+  /deep/ .mat-tab-label
+    flex: 30%
+
+/deep/ .spinner-container
+  height: 390px
+  display: flex
+  justify-content: center
+  align-items: center
+
+div .user-details-header
+  background: $background-color--gray
