Created Popup for editing template.(without image in it)

--- a/client/src/app/bithday-congratulation/bithday-congratulation.component.sass
+++ b/client/src/app/bithday-congratulation/bithday-congratulation.component.sass
@@ -5,9 +5,9 @@
 .mat-dialog-content
   display: flex
   flex-direction: column
-  justify-content: space-between
+  justify-content: flex-start
   align-items: center
-  height: 500px
+  height: 400px
   width: 600px
 
 .template_letter
@@ -18,8 +18,16 @@
 
 #header_with_iamge
   width: 400px
-  height: 200px
-  background-color: #78ab46
+  height: 150px
+  //background-color: #78ab46
+  display: flex
+  flex-direction: column
+  align-items: center
+  justify-content: space-around
+
+img
+  width: 200px
+  height: 100px
 
 
 mat-form-field
