--- a/client/src/app/birthday-congratulation/birthday-congratulation.component.html
+++ b/client/src/app/birthday-congratulation/birthday-congratulation.component.html
@@ -4,7 +4,7 @@
   <table class="template_letter">
 
     <tr>
-      <td id="header_with_iamge"  appBackground (click)="changeBackgroundColor()">
+      <td id="header_with_iamge"  appBackground [colour]="[headerColor]"  (click)="openColorsComponent()"  >
         <img [src]="fullImagePath"  (click)="changeImage($event)">
       </td>
     </tr>
